syntax = "proto3";

package offers.v1;

import "proto/common/geo.proto";

option go_package = "github.com/Binit-Dhakal/Saarathi/pkg/contracts/proto/offerspb";

message RideMatchingRequested {
  string saga_id = 1;
  string trip_id = 2;

  common.geo.v1.Coordinates pick_up = 3;
  common.geo.v1.Coordinates drop_off = 4;
  string car_type = 5;

  double max_search_radius_km = 6;
}

message TripOfferRequested {
  string saga_id = 1;
  string trip_id = 2;
  int32 price = 3;
  double distance = 4;
}
